use modern Map.of